--- a/package.json
+++ b/package.json
@@ -11,37 +11,26 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@tanstack/react-query": "^5.76.2",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/react": "^19.1.7",
     "axios": "^1.9.0",
     "axios-auth-refresh": "^3.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "firebase": "^11.8.1",
     "framer-motion": "^12.14.0",
-    "input-otp": "^1.4.2",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
     "react-syntax-highlighter": "^15.6.1",
     "react-timer-hook": "^4.0.5",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.28",
-    "zustand": "^5.0.5"
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "tailwindcss": "^4",
