--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
